<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/activity_form_uniform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        android:textColor="@color/color_foreground"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/lbl_uniform_day"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner android:id="@+id/spnUniformDay"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:text="@string/lbl_uniform_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUniformName"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgUniformPhoto"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:src="@drawable/camera"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>